--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "export": "set NODE_OPTIONS=--openssl-legacy-provider && next build && next export"
   },
   "dependencies": {
+    "@builder.io/react": "^3.1.1",
     "@n8tb1t/use-scroll-position": "^1.0.43",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.5.0",
